--- a/components/home/skills.module.css
+++ b/components/home/skills.module.css
@@ -6,7 +6,14 @@
 }
 
 .skillItem{
-    display: grid;
+    /* display: grid;
     grid-template-columns: 40% 60%;
-    margin: 0.4rem 0px;
+    margin: 0.4rem 0px; */
+    display: flex;
+    flex-flow: row;
+    margin: 0.2rem 0.6rem ;
+    background-color: white;
+    color: black;
+    padding: 0.2rem;
+    border-radius: 0.2rem;
 }
