--- a/components/projects-list-wrapper/projectsListWrapper.module.css
+++ b/components/projects-list-wrapper/projectsListWrapper.module.css
@@ -1,4 +1,4 @@
-.grid {
+/* .grid {
   display: grid;
   grid-template-columns: 100%;
   height: inherit;
@@ -9,8 +9,8 @@
   .grid {
     display: grid;
     width: 100%;
-    grid-template-columns: 45% 45%;
-    gap: 10%;
+    grid-template-columns: 100%;
+    gap: 5%;
     grid-template-rows: auto;
   }
-}
+} */
